@@ -122,11 +122,11 @@ $().ready(function() {
 			<input id="cname" name="name" class="required" minlength="2" />
 		<p>
 			<label for="cemail">E-Mail (required)</label>
-			<input id="cemail" name="email" class="required email" />
+			<input id="cemail" type="email" name="email" class="required" />
 		</p>
 		<p>
 			<label for="curl">URL (optional)</label>
-			<input id="curl" name="url" class="url" value="" />
+			<input id="curl" type="url" name="url" />
 		</p>
 		<p>
 			<label for="ccomment">Your comment (required)</label>
